[tool.poetry]
name = "cmdin"
version = "0.1.0"
description = "Build command interpreters easily."
authors = ["ivansantiagojr <ivansantiago.junior@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
taskipy = "^1.12.2"
isort = "^5.13.2"
blue = "^0.9.1"
ruff = "^0.1.14"
pytest = "^7.4.4"
pytest-cov = "^4.1.0"


[tool.poetry.group.doc.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.4"
mkdocstrings = "^0.24.0"
mkdocstrings-python = "^1.8.0"

[tool.taskipy.tasks]
lint = 'ruff . && blue --check . --diff'
format = 'blue .  && isort .'
docs = 'mkdocs serve'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
